Fix small alignment offset in go game demo.

--- a/go/app/css/app.css
+++ b/go/app/css/app.css
@@ -1,5 +1,9 @@
 /* app css stylesheet */
 
+body {
+	margin: 0;
+}
+
 .game {
 	padding: 20px;
 }
